export const snapshot = {};

snapshot[`Document List Command - Help Text 1`] = `
stdout:
"
Usage: list

Description:

  List documents

Options:

  -h, --help                        - Show this help.                                                
  -p, --project       <project>     - Filter by project name or ID                                   
  --current-project                 - Show documents for current issue's project (from VCS context)  
  -i, --initiative    <initiative>  - Filter by initiative name or ID                                
  -c, --creator       <creator>     - Filter by creator (username or 'self')                         
  --include-archived                - Include trashed documents                                      
  -l, --limit         <limit>       - Max number of documents (default: 50)                          
  -w, --web                         - Open documents view in browser                                 
  -a, --app                         - Open documents view in Linear.app                              
  -j, --json                        - Output result as JSON (for AI agents)                          
  --format            <format>      - Output format: text|json                                       
  --plain                           - Disable colored output                                         
  --no-pager                        - Disable automatic paging                                       

"
stderr:
""
`;

snapshot[`Document List Command - All Documents 1`] = `
stdout:
"    TITLE                                                PROJECT               CREATOR          UPDATED     
📄  API Design Document                                  Backend Platform      Alice Smith      654 days ago
📄  Database Migration Plan                              Infrastructure        Bob Jones        657 days ago
📄  Meeting Notes                                        -                     Charlie Brown    654 days ago
"
stderr:
""
`;

snapshot[`Document List Command - JSON Output 1`] = `
stdout:
'{
  "documents": [
    {
      "id": "doc-1",
      "title": "API Design Document",
      "slugId": "api-design-document",
      "url": "https://linear.app/test/document/api-design-document",
      "project": {
        "id": "project-1",
        "name": "Backend Platform"
      },
      "creator": {
        "name": "Alice Smith"
      },
      "createdAt": "2024-01-10T10:00:00Z",
      "updatedAt": "2024-01-15T14:30:00Z"
    }
  ],
  "count": 1,
  "filters": {}
}
'
stderr:
""
`;

snapshot[`Document List Command - Current Project (VCS) 1`] = `
stdout:
'{
  "documents": [
    {
      "id": "doc-1",
      "title": "API Design Document",
      "slugId": "api-design-document",
      "url": "https://linear.app/test/document/api-design-document",
      "project": {
        "id": "project-789",
        "name": "Backend Platform"
      },
      "creator": {
        "name": "Alice Smith"
      },
      "createdAt": "2024-01-10T10:00:00Z",
      "updatedAt": "2024-01-15T14:30:00Z"
    },
    {
      "id": "doc-2",
      "title": "Implementation Notes",
      "slugId": "implementation-notes",
      "url": "https://linear.app/test/document/implementation-notes",
      "project": {
        "id": "project-789",
        "name": "Backend Platform"
      },
      "creator": {
        "name": "Bob Jones"
      },
      "createdAt": "2024-01-12T09:00:00Z",
      "updatedAt": "2024-01-14T11:20:00Z"
    }
  ],
  "count": 2,
  "filters": {
    "project": "Backend Platform",
    "source": "vcs-context"
  }
}
'
stderr:
""
`;

snapshot[`Document List Command - Filter By Project 1`] = `
stdout:
'{
  "documents": [
    {
      "id": "doc-1",
      "title": "Project Specific Doc",
      "slugId": "project-specific-doc",
      "url": "https://linear.app/test/document/project-specific-doc",
      "project": {
        "id": "project-123",
        "name": "Mobile App"
      },
      "creator": {
        "name": "Alice Smith"
      },
      "createdAt": "2024-01-10T10:00:00Z",
      "updatedAt": "2024-01-15T14:30:00Z"
    }
  ],
  "count": 1,
  "filters": {
    "project": "project-123"
  }
}
'
stderr:
""
`;

snapshot[`Document List Command - No Documents Found 1`] = `
stdout:
"No documents found
"
stderr:
""
`;
